compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__pipes__pipe_callback_wrong_arity.snap
---
source: compiler-core/src_refactored/__core/type_/tests/pipes.rs
assertion_line: 142
expression: "\nfn callback(a: Int) {\n  fn() -> String {\n    \"Called\"\n  }\n}\n\npub fn main() {\n  let x = 1 |> callback(2)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn callback(a: Int) {
  fn() -> String {
    "Called"
  }
}

pub fn main() {
  let x = 1 |> callback(2)
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:9:16
  │
9 │   let x = 1 |> callback(2)
  │                ^^^^^^^^^^^ Expected no arguments, got 1
